Tests added for user controller and service. Debugging test in supplier service.